# VorteX

./: .clang-format  .gitmodules  LICENSE  README.md
Project X/: CMakeLists.txt  Project X.sln
Project X/Project X/: Bullets.cpp  Bullets.h  GruntShip.cpp  GruntShip.h  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  PlayerShip.cpp  PlayerShip.h  Project X.vcxproj  Project X.vcxproj.filters  Ship.cpp  Ship.h  core.h  coreDef.cpp  main.cpp
Project X/Project X/img/: Thumbs.db
Project X/Project X/img/INTRO/: Thumbs.db
Project X/Project X/img/boss/: Thumbs.db
Project X/Project X/img/pSprite/: Thumbs.db
